--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,6 +43,7 @@
                 <li><a href="{{ path('create_genre') }}">Add Genre</a></li>
                 <li><a href="{{ path('create_category') }}">Add Category</a></li>
             </ul>
+
         </div><!--/.nav-collapse -->
 
         <div class="mt-3 mt-md-0 ms-md-auto d-flex align-items-center user">
@@ -60,6 +61,7 @@
             {% endif %}
 
         </div>
+
     </div>
 </nav>
 
@@ -79,7 +81,9 @@
 
 </div><!-- /.container -->
 
+
 {% block javascripts %}{% endblock %}
 
 </body>
+<li class="active"><a href="{{ path('app_contact') }}">Contact</a></li>
 </html>
