--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,3 +1,4 @@
+{% extends 'base.html.twig' %}
 {% block body %}
     <style type="text/css">
         input[type=text], select {
@@ -25,11 +26,7 @@
             background-color: #96ff52;
         }
 
-        div {
-            border-radius: 5px;
-            background-color: #00d3f2;
-            padding: 20px;
-        }
+
     </style>
     <body>
     <h3>Contact</h3>
