--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <style>
         div.c {
-            background: #00b0ff;
+            background: #ff6e00;
             color: #e0ff6c;
             text-align: center;
         }
