--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Welcome! | WaterNew {% endblock %}
+{% block title %} Welcome! | ProductNew {% endblock %}
 
 {% block body %}
 
