--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -33,6 +33,7 @@
                                 Keep me logged in
                             </label>
                             <br>
+
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                             <input type="hidden" name="go_to" value="{{ path('product_list') }}"/>
                             <input type="hidden" name="back_to" value="{{ path('app_login') }}"/>
@@ -40,6 +41,8 @@
                             {# If you want to control the URL the user is redirected to on success
                             <input type="hidden" name="_target_path" value="/account"/> #}
 
+                            <a class="btn btn-sm btn-success" href="{{ path ('app_register') }}">Registration</a>
+                            <br>
                             <button type="submit" class="btn-primary">Login</button>
                         </form>
                     </div>
